@@ -1,3 +1,8 @@
+2023-04-13  Frank Ch. Eigler <fche@redhat.com>
+
+	* debuginfod.cxx (archive_classify, scan_archive_file): Catch and
+	propagate exceptions during archive scans.
+
 2023-03-30  Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 	* debuginfod-client.c (update_atime): New function.
